updated config generated by sonar cloud

--- a/src/java/techtalks-consumer/pom.xml
+++ b/src/java/techtalks-consumer/pom.xml
@@ -17,6 +17,8 @@
 	<properties>
 		<!-- <java.version>19</java.version> -->
 		<java.version>17</java.version>
+		<sonar.organization>nileshgule-github</sonar.organization>
+ 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
