--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -36,8 +36,8 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -f /home/runner/work/cloud-native-ninja/cloud-native-ninja/src/java/techtalks-producer/ -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=NileshGule_cloud-native-ninja
 
-      - name: Build and analyze TechTalks Consumer
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -f /home/runner/work/cloud-native-ninja/cloud-native-ninja/src/java/techtalks-consumer/ -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=NileshGule_cloud-native-ninja
+      # - name: Build and analyze TechTalks Consumer
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #   run: mvn -f /home/runner/work/cloud-native-ninja/cloud-native-ninja/src/java/techtalks-consumer/ -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=NileshGule_cloud-native-ninja
