updated tags for consumer component

--- a/k8s/backstage/techtalks-consumer-component.yaml
+++ b/k8s/backstage/techtalks-consumer-component.yaml
@@ -9,6 +9,8 @@ metadata:
   tags:
     - go
     - java
+    - dotnet
+    - rust
   links:
     - url: https://admin.example-org.com
       title: Admin Dashboard
