monorepo commit for consumer

--- a/.github/workflows/cloud-native-ninja-tecktalks-consumer-ci-cd.yaml
+++ b/.github/workflows/cloud-native-ninja-tecktalks-consumer-ci-cd.yaml
@@ -69,5 +69,5 @@ jobs:
                 cluster-name: ${{ env.CLUSTER_NAME }}
                 resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
                 use-kubelogin: "true"
-            - name: Deploy application
+            - name: Deploy techtalks consumer application
               run: helm upgrade --wait -i -f ${{ env.CHART_OVERRIDE_PATH }} --set ${{ env.CHART_OVERRIDES }} automated-deployment ${{ env.CHART_PATH }}
