--- a/k8s/TechTalksProducer/producer-deployment.yml
+++ b/k8s/TechTalksProducer/producer-deployment.yml
@@ -31,7 +31,7 @@ spec:
           # image: ngacrregistry.azurecr.io/techtalksproducer:java
           # image: nileshgule/techtalksproducer:dotnet
           # image: nileshgule/techtalksproducer:java
-          image: nileshgule/techtalksproducer:go
+          image: nileshgule/techtalksproducer:go_1
           
           # env:
           #   - name: ASPNETCORE_ENVIRONMENT
